--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap');
 
 :root {
-  --border-color: #57c09f; /* #144fc6;*/
+  --border-color:#2e9675;/* #144fc6;*/
   --fill-color: #08ed8f;/*#6ab3f8;*/
 }
 
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color:#22c1c3; /*#3494e4;*/
+  background-color:#1aa196; /*#3494e4;*/
   color: #fff;
   font-family: 'Montserrat', sans-serif;
   display: flex;
